# DevTrees

./: .gitignore  .prettierignore  DESIGN.md  PRODUCT.md  README.md  WORKFLOW.yaml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.web.json  vite.config.ts
.github/: copilot-instructions.md
.github/scripts/: semver-check.js
.github/workflows/: devtrees-build.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-09T13-43-05Z__app-shell.md
specs/: ghe-update.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ado.rs  az.rs  copilot_history.rs  db.rs  error.rs  gh.rs  git.rs  github.rs  github_auth.rs  lib.rs  main.rs  paths.rs  repo.rs  repositories.rs  reviews.rs  sessions.rs  system.rs  updater.rs  workspaces.rs  worktrees.rs
src/main/: db.ts  git.ts  index.ts  ipc-ado.ts  ipc-repo.ts  ipc-sessions.ts  ipc-system.ts  ipc-workspaces.ts  ipc-worktrees.ts  repo-status.ts  sessions.ts  updater.ts  workspaces.ts  worktrees.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: app-sidebar.tsx  commit-dialog.tsx  confirm-dialog.tsx  create-branch-dialog.tsx  create-worktree-dialog.tsx  delete-worktree-dialog.tsx  detail-toolbar.tsx  status-bar.tsx
src/renderer/src/lib/: ado.ts  (+14 more)
src/shared/: ado.ts  copilot-history.ts  repo.ts  repository.ts  reviews.ts  sessions.ts  system.ts  updater.ts  workspace.ts  worktree.ts
(+53 files in other folders)
