[package]
name = "devtrees"
version = "0.95.0"
description = "DevTrees"
authors = ["DevTrees"]
edition = "2021"
rust-version = "1.79"

# The library target is what the Tauri desktop entrypoint links against.
[lib]
name = "devtrees_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "macros"] }
portable-pty = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

[profile.release]
# Smaller, faster-to-ship release binaries.
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
